--- a/backend/node-backend/package.json
+++ b/backend/node-backend/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.3.0",
-    "@prisma/client": "^6.19.2",
+    "@prisma/client": "6.19.2",
     "@types/multer": "^2.0.0",
     "@types/ws": "^8.18.1",
     "bcryptjs": "^3.0.3",
@@ -36,7 +36,7 @@
     "@types/node": "^25.1.0",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
-    "prisma": "^6.19.2",
+    "prisma": "6.19.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
